<resources>
    <string name="app_name">Super DL</string>
    <string name="voice_interaction_service_label">Super DL Elena asszisztens</string>
    <string name="app_name_full">Super Digital Launcher</string>
    <string name="brand_name">Super DL</string>
    <string name="qr_scan_status">Q R olvasás</string>
    <string name="qr_scan_hint">⬅ vissza a menübe</string>
    <string name="qr_scan_found">Kód beolvasva</string>
    <string name="light_detector_title">Fénydetektor</string>
    <string name="light_detector_hint">⬅ kilépés  •  a síp magassága = fény erőssége</string>
    <string name="light_detector_level">Fény: %1$d%%  •  síp: %2$d Hz</string>
    <string name="color_detector_title">Színfelismerő</string>
    <string name="color_detector_hint">⬅ kilépés  •  ➡ ismétlés  •  mutasd a felületet a kamerának</string>
    <string name="color_detector_result">Szín: %1$s  •  fényerő: %2$d%%</string>
    <string name="face_camera_title">Kamera és szelfi</string>
    <string name="face_camera_title_selfie">Kamera és szelfi</string>
    <string name="face_camera_intro">Kamera bekapcsolva. Hangban jelzi az arcok helyzetét. Jobbra söprés: fénykép mentése. Lefelé söprés: utolsó fénykép megosztása vagy küldése, videó közben leállítás. Felfelé söprés: szelfi vagy hátlapi kamera váltása. Balra söprés: kilépés. Hangerő fel: videó indítás hátlapi kamerán. Hangerő le: videó leállítás.</string>
    <string name="face_camera_intro_selfie">Kamera bekapcsolva. Hangban jelzi az arcok helyzetét. Jobbra söprés: fénykép mentése. Lefelé söprés: utolsó fénykép megosztása vagy küldése. Felfelé söprés: szelfi vagy hátlapi kamera váltása. Balra söprés: kilépés.</string>
    <string name="face_camera_hint">⬅ kilépés  •  ➡ fénykép mentés  •  ⬆ kamera váltás  •  ⬇ megosztás / videó leállítás</string>
    <string name="face_camera_mode_back">Hátlapi kamera.</string>
    <string name="face_camera_mode_selfie">Szelfi kamera, előlapi.</string>
    <string name="face_camera_switch_blocked_recording">Videó közben nem lehet kamerát váltani.</string>
    <string name="face_camera_switch_blocked_mode">Fénykép vagy videó közben előbb térj vissza az arc jelzéshez.</string>
    <string name="face_camera_memory_error">A kamera leállt, mert a telefon memóriája megtelt. Próbáld újra.</string>
    <string name="camera_memory_error">A kamera leállt, mert a telefon memóriája megtelt. Próbáld újra.</string>
    <string name="face_camera_status_ready">Kész</string>
    <string name="face_camera_status_recording">Videófelvétel folyamatban</string>
    <string name="face_camera_exit_button">Kilépés</string>
    <string name="face_camera_exit_desc">Kilépés az arcfelismerő kamerából</string>
    <string name="face_camera_preview_desc">Kamera előnézet</string>
    <string name="face_camera_exit">Kamera leállítva</string>
    <string name="face_camera_permission_denied">Kamera engedély szükséges az arcfelismerő kamerához</string>
    <string name="face_camera_camera_error">A kamera nem indítható</string>
    <string name="face_camera_photo_saved">Fénykép elmentve: %1$s</string>
    <string name="face_camera_photo_error">A fénykép mentése sikertelen</string>
    <string name="face_camera_video_started">Videófelvétel elindult</string>
    <string name="face_camera_video_saved">Videó elmentve: %1$s</string>
    <string name="face_camera_video_error">A videó mentése sikertelen</string>
    <string name="face_camera_video_already_recording">A videófelvétel már fut</string>
    <string name="face_camera_video_not_recording">Nincs futó videófelvétel</string>
    <string name="face_camera_video_unavailable">Videófelvétel nem elérhető ezen a kamerán. Fénykép és arc jelzés működik.</string>
    <string name="face_camera_share_chooser">Fénykép megosztása</string>
    <string name="face_camera_share_opened">Fénykép megosztása: %1$s. Válaszd ki az alkalmazást.</string>
    <string name="face_camera_share_none">Még nincs mentett fénykép. Jobbra söpréssel készíts egyet.</string>
    <string name="face_camera_share_error">A fénykép megosztása nem sikerült.</string>
    <string name="env_scanner_title">Környezeti Kitekintő – Kamera</string>
    <string name="env_scanner_intro">Környezeti kitekintő bekapcsolva. A kamera felismeri a környező tárgyakat és hangban jelzi a helyzetüket. Hangerő gomb: középen lévő tárgy felolvasása. Balra söprés: kilépés.</string>
    <string name="env_scanner_help">Tartsd a telefont vízszintesen. A program 5–10 kép másodpercenként elemzi a környezetet. Kategória gombokkal némíthatsz tárgyakat. Hangerő gomb: középen lévő tárgy azonnali felolvasása.</string>
    <string name="env_scanner_hint">⬅ kilépés  •  ⬆ ismétlés  •  ➡ középen lévő tárgy  •  hangerő gomb: azonnali felolvasás</string>
    <string name="env_scanner_status_ready">Kész a beolvasásra</string>
    <string name="env_scanner_status_scanning">Beolvasás folyamatban</string>
    <string name="env_scanner_status_paused">Beolvasás szüneteltetve</string>
    <string name="env_scanner_start">Beolvasás indítása</string>
    <string name="env_scanner_stop">Beolvasás leállítása</string>
    <string name="env_scanner_start_desc">Beolvasás indítása gomb. Megnyomásra elkezdi a környezet elemzését.</string>
    <string name="env_scanner_stop_desc">Beolvasás leállítása gomb. Megnyomásra szünetelteti a környezet elemzését.</string>
    <string name="env_scanner_categories_title">Tárgykategóriák némítása</string>
    <string name="env_scanner_category_active">%1$s – bejelentés bekapcsolva</string>
    <string name="env_scanner_category_muted">%1$s – bejelentés némítva</string>
    <string name="env_scanner_mute_door_desc">Ajtó kategória némítása vagy visszakapcsolása</string>
    <string name="env_scanner_mute_chair_desc">Szék kategória némítása vagy visszakapcsolása</string>
    <string name="env_scanner_mute_table_desc">Asztal kategória némítása vagy visszakapcsolása</string>
    <string name="env_scanner_mute_person_desc">Személy kategória némítása vagy visszakapcsolása</string>
    <string name="env_scanner_mute_floor_desc">Földön lévő tárgy kategória némítása vagy visszakapcsolása</string>
    <string name="env_scanner_exit_button">Kilépés</string>
    <string name="env_scanner_exit_desc">Kilépés a környezeti kitekintőből</string>
    <string name="env_scanner_mute_phone_desc">Telefon kategória némítása vagy visszakapcsolása</string>
    <string name="env_scanner_no_objects">Nincs felismert tárgy</string>
    <string name="env_scanner_center_empty">Nincs tárgy a kép közepén</string>
    <string name="env_scanner_exit">Környezeti kitekintő leállítva</string>
    <string name="env_scanner_permission_denied">Kamera engedély szükséges a környezeti kitekintőhöz</string>
    <string name="env_scanner_camera_error">A kamera nem indítható</string>
    <string name="env_scanner_model_error">Az objektumfelismerő modell nem tölthető be</string>
    <string name="env_scanner_memory_error">Memória elfogyott. A beolvasás leállt. Indítsd újra a beolvasást, vagy zárd be a többi alkalmazást.</string>
    <string name="currency_title">Super DL Pénzfelismerő</string>
    <string name="currency_intro">Pénzfelismerő mód aktív. Mutasd a kamerának a bankjegyet. Halk kattintás jelzi, hogy dolgozik. Hangerő gomb: azonnali ellenőrzés. Balra söprés: kilépés.</string>
    <string name="currency_help">Tartsd a bankjegyet a kamera elé, jól világítva. A program offline azonosítja a forint címleteket. Hangerő gomb: egykattintásos ellenőrzés.</string>
    <string name="currency_status_active">Pénzfelismerő mód aktív</string>
    <string name="currency_status_scanning">Bankjegy keresése…</string>
    <string name="currency_status_detected">Bankjegy észlelve</string>
    <string name="currency_preview_desc">Kamera előnézet a bankjegy-felismeréshez</string>
    <string name="currency_exit">Pénzfelismerő leállítva</string>
    <string name="currency_exit_button">Kilépés</string>
    <string name="currency_exit_desc">Kilépés a pénzfelismerőből</string>
    <string name="currency_hint">⬅ kilépés  •  hangerő gomb: ellenőrzés  •  vissza gomb kétszer: kilépés</string>
    <string name="currency_permission_denied">Kamera engedély szükséges a pénzfelismerőhöz</string>
    <string name="currency_camera_error">A kamera nem indítható</string>
    <string name="currency_model_error">A bankjegy-felismerő modell nem tölthető be</string>
    <string name="currency_not_recognized">Bankjegy nem felismerhető. Tartsd közelebb, jól világítva, és próbáld újra.</string>
    <string name="currency_no_banknote">Nem látok bankjegyet. Üres járat vagy háttér. Mutasd a bankjegyet a kamera elé.</string>
    <string name="currency_torch_on">Gyenge fény, vaku bekapcsolva.</string>
    <string name="currency_no_frame">Még nincs kamera kép, várj egy pillanatot</string>
    <string name="currency_verify_error">Az ellenőrzés sikertelen</string>
    <string name="currency_memory_error">Memória elfogyott. A pénzfelismerő leállt. Indítsd újra, vagy zárd be a többi alkalmazást.</string>
    <string name="currency_back_again">Kilépéshez nyomd meg újra a vissza gombot, vagy balra söpörj.</string>
    <string name="text_reader_status_active">%1$s aktív</string>
    <string name="text_reader_status_scanning">Szöveg keresése…</string>
    <string name="text_reader_intro_medication">Gyógyszerdoboz olvasó bekapcsolva. Mutasd a kamerának a doboz feliratát. Hangerő gomb: azonnali felolvasás. Balra söprés: kilépés.</string>
    <string name="text_reader_intro_label">Címke olvasó bekapcsolva. Mutasd a kamerának a termék címkéjét. Hangerő gomb: azonnali felolvasás. Balra söprés: kilépés.</string>
    <string name="text_reader_intro_general">Szöveg olvasó bekapcsolva. Mutasd a kamerának a szöveget. Hangerő gomb: azonnali felolvasás. Balra söprés: kilépés.</string>
    <string name="text_reader_intro_continuous">Folyamatos szövegolvasó bekapcsolva. Vidd végig a kamerát a szövegen: új résznél automatikusan felolvas. Jobbra söprés: szünet vagy folytatás. Fel söprés: ismétlés. Le söprés: következő rész. Hangerő gomb: azonnali felolvasás. Balra söprés: kilépés.</string>
    <string name="text_reader_help_medication">Tartsd a gyógyszerdoboz feliratát jól világítva a kamera elé. A program felolvassa a hatóanyagot, adagolást és fontos figyelmeztetéseket.</string>
    <string name="text_reader_help_label">Tartsd a termék címkéjét a kamera elé. A program felolvassa az összetételt, allergén jelzéseket és tápértéket.</string>
    <string name="text_reader_help_general">Tartsd a dokumentumot vagy feliratot a kamera elé. A program felolvassa az észlelt szöveget.</string>
    <string name="text_reader_help_continuous">Folyamatos mód: a kamera folyamatosan figyeli a szöveget. Ha más részre mutatsz, automatikusan felolvassa az új részt. Hosszú szövegnél le söpréssel lépkedhetsz a részek között.</string>
    <string name="text_reader_preview_desc">Kamera előnézet a szövegfelismeréshez</string>
    <string name="text_reader_exit_button">Kilépés</string>
    <string name="text_reader_exit_desc">Kilépés a szövegolvasóból</string>
    <string name="text_reader_exit_medication">Gyógyszerdoboz olvasó leállítva</string>
    <string name="text_reader_exit_label">Címke olvasó leállítva</string>
    <string name="text_reader_exit_general">Szöveg olvasó leállítva</string>
    <string name="location_trainer_status_ready">Kész a rögzítésre</string>
    <string name="location_trainer_preview_desc">Kamera előnézet a helyszín tanításhoz</string>
    <string name="location_trainer_exit_button">Kilépés</string>
    <string name="location_trainer_exit_desc">Kilépés a helyszín tanításból</string>
    <string name="card_recognizer_status_scanning">Kártya keresése…</string>
    <string name="card_recognizer_exit_button">Leállítás</string>
    <string name="card_recognizer_exit_desc">Kártya felismerő leállítása</string>
    <string name="card_recognizer_preview_desc">Kamera előnézet kártya felismeréshez</string>
</resources>